fixed overflow

--- a/index.css
+++ b/index.css
@@ -96,6 +96,10 @@ header{
 @media screen and (max-width: 600px){
     body{
         margin: 5px;
+        overflow: hidden !important;
+        padding-left: 5px;
+        padding-right: 5px;
+        font-size: small;
     }
     .projects{
         display:flex;
